# product-update-digest

./: .env.example  .gitignore  AGENTS.md  DEPLOYMENT.md  INSTALL.md  LICENSE  Makefile  README.md  config.py  index.html  main.py  plan.md  pyproject.toml  requirements.txt  search.py  summarizer.py
cribl/: index.html
ocient/: index.html
publisher/: github_pages.py
publisher/templates/: company_index.html.j2  index.html.j2  vector_preview.html.j2
scrapers/: base.py  cribl.py  ocient.py  paloalto.py
src/digest/: config.py  main.py  notifier.py
src/digest/publisher/: github_pages.py
src/digest/publisher/templates/: company_index.html.j2  index.html.j2  vector_preview.html.j2
src/digest/scrapers/: base.py  cribl.py  ocient.py  paloalto.py
src/digest/storage/: db.py  models.py  vec_client.py
src/digest/summarizer/: __init__.py
src/hermes/: digest_mcp.py  model-guidelines.md
storage/: chroma_client.py  db.py  models.py  vec_client.py
summarizer/: __init__.py
tests/: conftest.py  test_article_text.py  test_cribl_scraper.py  test_db.py  test_deduplication.py  test_ocient_scraper.py  test_paloalto_scraper.py  test_publisher.py  test_stages.py  test_summarizer.py
tests/fixtures/: cribl_article.html  cribl_listing.html  ocient_article.html  ocient_blog_listing.html  ocient_newsroom.html  paloalto_article.html
tools/: rag.py  search.py
xsiam/: index.html
